--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-body{
-    background: #e3f9ff;
+body {
+    background-color: rgb(196, 255, 209);
+}
+
+#cv-template {
+    display: none;
+}
+
+.myimg {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 200px;
+}
+
+.background {
+    background-color: rgb(42, 201, 230);
+    color: rgb(0, 0, 0);
 }
